Integrate HttpStatusLineWriter, refactor response writer tests
Each test focuses on its corresponding component of the HTTP response